compiler/tools/fpp-check/test/port_instance/undef_product_send.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_product_send.fpp:3.3
  product send port productSendOut
  ^
error: symbol Fw is not defined
note: looking for a port here
